--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,6 +34,6 @@ jobs:
         run: ls -al
 
       - name: Instalar
-        run: 
+        run:  | 
           cd .github/workflows
           ls -al
